--- a/Home.html
+++ b/Home.html
@@ -10,17 +10,18 @@
 <body>
     <header>
         <div class="nav">
-            <a href="Home.html"><img src="Genshin_logo.png" class="logoimg"></a>
-            <a href="Home.html" class="navli">홈</a>
-            <a href="Character.html" class="navli">캐릭터</a>
-            <a href="Information.html" class="navli">정보</a>
-            <a href="https://genshin.mihoyo.com/ko/home" class="navli">공식 사이트</a>
+            <a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a>
+            <a href="Home.html" class="navli li_home">홈</a>
+            <a href="Character.html" class="navli li_cha">캐릭터</a>
+            <a href="Information.html" class="navli li_inf">정보</a>
+            <a href="https://genshin.mihoyo.com/ko/home" class="navli li_genshin">공식 사이트</a>
         </div>
     </header>
     <div class="main">
         <div class="main_writing">
             <h1>티바트 대륙에 오신것을 환영합니다</h1>
             <p>원신은 7가지 원소들의 상호작용을 이용한 미호요의 3D 오픈월드 액션 RPG 게임입니다</p>
+            <p></p>
         </div>
     </div>
 </body>
