--- a/Information.html
+++ b/Information.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="nav">
-            <a href="Home.html"><img src="Genshin_logo.png" class="logoimg"></a>
+            <a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a>
             <a href="Home.html" class="navli">홈</a>
             <a href="Character.html" class="navli">캐릭터</a>
             <a href="Information.html" class="navli">정보</a>
