--- a/Home.html
+++ b/Home.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <div class="nav">
+        <ul class="nav">
             <a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a>
-            <a href="Home.html" class="navli li_home">홈</a>
-            <a href="Character.html" class="navli li_cha">캐릭터</a>
-            <a href="Information.html" class="navli li_inf">정보</a>
-            <a href="https://genshin.mihoyo.com/ko/home" class="navli li_genshin">공식 사이트</a>
-        </div>
+            <li class="navli li_home"><a href="Home.html" class="li_a">홈</a></li>
+            <li class="navli li_cha"><a href="Character.html" class="li_a">캐릭터</a></li>
+            <li class="navli li_inf"><a href="Information.html" class="li_a">정보</a></li>
+            <li class="navli li_genshin"><a href="https://genshin.mihoyo.com/ko/home" class="li_a">공식 사이트</a></li>
+        </ul>
     </header>
     <div class="main">
         <div class="main_writing">
