--- a/Information.html
+++ b/Information.html
@@ -11,10 +11,10 @@
     <header>
         <div class="nav">
             <a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a>
-            <a href="Home.html" class="navli">홈</a>
-            <a href="Character.html" class="navli">캐릭터</a>
-            <a href="Information.html" class="navli">정보</a>
-            <a href="https://genshin.mihoyo.com/ko/home" class="navli">공식 사이트</a>
+            <a href="Home.html" class="navli li_home">홈</a>
+            <a href="Character.html" class="navli li_cha">캐릭터</a>
+            <a href="Information.html" class="navli li_inf">정보</a>
+            <a href="https://genshin.mihoyo.com/ko/home" class="navli li_genshin">공식 사이트</a>
         </div>
     </header>
 </body>
