--- a/Home.html
+++ b/Home.html
@@ -10,11 +10,29 @@
 <body>
     <header>
         <ul class="nav">
-            <a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a>
-            <li class="navli li_home"><a href="Home.html" class="li_a">홈</a></li>
-            <li class="navli li_cha"><a href="Character.html" class="li_a">캐릭터</a></li>
-            <li class="navli li_inf"><a href="Information.html" class="li_a">정보</a></li>
-            <li class="navli li_genshin"><a href="https://genshin.mihoyo.com/ko/home" class="li_a">공식 사이트</a></li>
+            <li class="menu_a">
+                <div class="main_menu menu1"><a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a></li></div>
+            <li class="menu_b">
+                <div class="main_menu menu2"><a href="Home.html">홈</a></li></div>
+            <li class="menu_c">
+                <div class="main_menu menu3"><a href="Character.html">게임정보</a></div>
+                <ul class="sub_menu">
+                    <li class>캐릭터</li>
+                    <li>장비</li>
+                    <li>성유물</li>
+                </ul>
+            </li>
+            <li class="menu_d">
+                <div class="main_menu menu4"><a href="Information.html" >자료실</a></div>
+                <ul class="sub_menu">
+                    <li>지역</li>
+                    <li>스토리</li>
+                    <li>일곱신</li>
+                </ul>
+            </li>
+            <li class="menu_e">
+                <div class="main_menu menu5"><a href="https://genshin.mihoyo.com/ko/home">공식 사이트</a></div>
+            </li>
         </ul>
     </header>
     <div class="main">
