--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <title>원신</title>
 </head>
 <body>
     <header>
         <ul class="nav">
             <li class="menu_a">
-                <div class="main_menu menu1"><a href="Home.html"><img src="GIKR_1587984241_9146.png" class="logoimg"></a></li></div>
+                <div class="main_menu menu1"><a href="../HTML/Home.html"><img src="../Image/GIKR_1587984241_9146.png" class="logoimg"></a></li></div>
             <li class="menu_b">
-                <div class="main_menu menu2"><a href="Home.html">홈</a></li></div>
+                <div class="main_menu menu2"><a href="../HTML/Home.html">홈</a></li></div>
             <li class="menu_c">
-                <div class="main_menu menu3"><a href="Character.html">게임정보</a></div>
+                <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
                 <ul class="sub_menu">
                     <li class>캐릭터</li>
                     <li>장비</li>
@@ -23,7 +23,7 @@
                 </ul>
             </li>
             <li class="menu_d">
-                <div class="main_menu menu4"><a href="Information.html" >자료실</a></div>
+                <div class="main_menu menu4"><a href="../HTML/Information.html" >자료실</a></div>
                 <ul class="sub_menu">
                     <li>지역</li>
                     <li>스토리</li>
@@ -34,5 +34,12 @@
             </li>
         </ul>
     </header>
+    <div class="main">
+        <div class="main_writing">
+            <h1>티바트 대륙에 오신것을 환영합니다</h1>
+            <p>원신은 7가지 원소들의 상호작용을 이용한 미호요의 3D 오픈월드 액션 RPG 게임입니다</p>
+            <p></p>
+        </div>
+    </div>
 </body>
 </html>
