--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -11,7 +11,7 @@
     <header>
         <ul class="nav">
             <li class="menu_a">
-                <div class="main_menu menu1"><a href="../HTML/Home.html"><img src="../Image/GIKR_1587984241_9146.png" class="logoimg"></a></li></div>
+                <div class="main_menu menu1"><img src="../Image/GIKR_1587984241_9146.png" class="logoimg"></li></div>
             <li class="menu_b">
                 <div class="main_menu menu2"><a href="../HTML/Home.html">홈</a></li></div>
             <li class="menu_c">
