드롭다운에 폰트적용

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -17,7 +17,7 @@
             <li class="menu_c">
                 <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
                 <ul class="sub_menu">
-                    <li class>캐릭터</li>
+                    <li>캐릭터</li>
                     <li>장비</li>
                     <li>성유물</li>
                 </ul>
