메인페이지 마무리

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -17,16 +17,16 @@
             <li class="menu_c">
                 <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
                 <ul class="sub_menu">
-                    <li class>캐릭터</li>
-                    <li>장비</li>
-                    <li>성유물</li>
+                    <li><a href="../HTML/Character.html">캐릭터</a></li>
+                    <li><a href="../HTML/Character.html">장비</a></li>
+                    <li><a href="../HTML/Character.html">성유물</a></li>
                 </ul>
             </li>
             <li class="menu_d">
                 <div class="main_menu menu4"><a href="../HTML/Information.html" >자료실</a></div>
                 <ul class="sub_menu">
-                    <li>지역</li>
-                    <li>스토리</li>
+                    <li><a href="../HTML/Information.html" >지역</a></li>
+                    <li><a href="../HTML/Information.html" >스토리</a></li>
                 </ul>
             </li>
             <li class="menu_e">
@@ -34,5 +34,29 @@
             </li>
         </ul>
     </header>
+    <div class="main">
+        <div class="character_icon">
+            <img class="c_icon" src="../Image/icon_traver.png">
+            <img class="c_icon" src="../Image/icon_traver1.png">
+            <img class="c_icon" src="../Image/icon_amber.png">
+            <img class="c_icon" src="../Image/icon_kaeya.png">
+            <img class="c_icon" src="../Image/icon_lisa.png">
+            <img class="c_icon" src="../Image/icon_noelle.png">
+            <img class="c_icon" src="../Image/icon_sucrose.png">
+            <img class="c_icon" src="../Image/icon_jean.png">
+            <img class="c_icon" src="../Image/icon_klee.png">
+            <img class="c_icon" src="../Image/icon_albedo.png">
+            <p>남행자</p>
+            <p>여행자</p>
+            <p>엠버</p>
+            <p>케이아</p>
+            <p>리사</p>
+            <p>노엘</p>
+            <p>설탕</p>
+            <p>진</p>
+            <p>클레</p>
+            <p>알베도</p>
+        </div>
+    </div>
 </body>
 </html>
