--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -17,16 +17,16 @@
             <li class="menu_c">
                 <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
                 <ul class="sub_menu">
-                    <li>캐릭터</li>
-                    <li>장비</li>
-                    <li>성유물</li>
+                    <li><a href="../HTML/Character.html">캐릭터</a></li>
+                    <li><a href="../HTML/Character.html">장비</a></li>
+                    <li><a href="../HTML/Character.html">성유물</a></li>
                 </ul>
             </li>
             <li class="menu_d">
                 <div class="main_menu menu4"><a href="../HTML/Information.html" >자료실</a></div>
                 <ul class="sub_menu">
-                    <li>지역</li>
-                    <li>스토리</li>
+                    <li><a href="../HTML/Information.html" >지역</a></li>
+                    <li><a href="../HTML/Information.html" >스토리</a></li>
                 </ul>
             </li>
             <li class="menu_e">
