캐릭터 페이지 아이콘 등록

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -35,27 +35,48 @@
         </ul>
     </header>
     <div class="main">
+        <h2>주인공</h2>
         <div class="character_icon">
-            <img class="c_icon" src="../Image/icon_traver.png">
-            <img class="c_icon" src="../Image/icon_traver1.png">
-            <img class="c_icon" src="../Image/icon_amber.png">
-            <img class="c_icon" src="../Image/icon_kaeya.png">
-            <img class="c_icon" src="../Image/icon_lisa.png">
-            <img class="c_icon" src="../Image/icon_noelle.png">
-            <img class="c_icon" src="../Image/icon_sucrose.png">
-            <img class="c_icon" src="../Image/icon_jean.png">
-            <img class="c_icon" src="../Image/icon_klee.png">
-            <img class="c_icon" src="../Image/icon_albedo.png">
-            <p>남행자</p>
-            <p>여행자</p>
-            <p>엠버</p>
-            <p>케이아</p>
-            <p>리사</p>
-            <p>노엘</p>
-            <p>설탕</p>
-            <p>진</p>
-            <p>클레</p>
-            <p>알베도</p>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_traver.png"><p>남행자</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_traver1.png"><p>여행자</p></a></div>
+        </div>
+        <h2>몬드</h2>
+        <div class="character_icon">
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_lisa.png"><p>리사</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_noelle.png"><p>노엘</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_sucrose.png"><p>설탕</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_jean.png"><p>진</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_klee.png"><p>클레</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_albedo.png"><p>알베도</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_eula.png"><p>유라</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_babara.png"><p>바바라</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_rosaria.png"><p>로자리아</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_fischl.png"><p>피슬</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_bennett.png"><p>베넷</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_mona.png"><p>모나</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_venti.png"><p>벤티</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_razor.png"><p>레이저</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_diluc.png"><p>다이루크</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
+        </div>
+        <h2>리월</h2>
+        <div class="character_icon">
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xinyan.png"><p>신염</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_yanfei.png"><p>연비</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_ningguang.png"><p>응광</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_keqing.png"><p>각청</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xiangling.png"><p>향릉</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_beidou.png"><p>북두</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xingqiu.png"><p>행추</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_qiqi.png"><p>치치</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_ganyu.png"><p>감우</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xiao.png"><p>소</p></a></div>
+            <div><a href="home.html"><img class="c_icon" src="../Image/icon_hutao.png"><p>호두</p></a></div>
+
         </div>
     </div>
 </body>
