캐릭터 아이콘 디자인

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -37,46 +37,56 @@
     <div class="main">
         <h2>주인공</h2>
         <div class="character_icon">
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_traver.png"><p>남행자</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_traver1.png"><p>여행자</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver.png"><p>남행자</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver1.png"><p>여행자</p></a></div>
         </div>
         <h2>몬드</h2>
         <div class="character_icon">
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_lisa.png"><p>리사</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_noelle.png"><p>노엘</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_sucrose.png"><p>설탕</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_jean.png"><p>진</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_klee.png"><p>클레</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_albedo.png"><p>알베도</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_eula.png"><p>유라</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_babara.png"><p>바바라</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_rosaria.png"><p>로자리아</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_fischl.png"><p>피슬</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_bennett.png"><p>베넷</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_mona.png"><p>모나</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_venti.png"><p>벤티</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_razor.png"><p>레이저</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_diluc.png"><p>다이루크</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_lisa.png"><p>리사</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_noelle.png"><p>노엘</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sucrose.png"><p>설탕</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_jean.png"><p>진</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_klee.png"><p>클레</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_albedo.png"><p>알베도</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_eula.png"><p>유라</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_babara.png"><p>바바라</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_rosaria.png"><p>로자리아</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_fischl.png"><p>피슬</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_bennett.png"><p>베넷</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_mona.png"><p>모나</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_venti.png"><p>벤티</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_razor.png"><p>레이저</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_diluc.png"><p>다이루크</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
         </div>
         <h2>리월</h2>
         <div class="character_icon">
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xinyan.png"><p>신염</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_yanfei.png"><p>연비</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_ningguang.png"><p>응광</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_keqing.png"><p>각청</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xiangling.png"><p>향릉</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_beidou.png"><p>북두</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xingqiu.png"><p>행추</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_qiqi.png"><p>치치</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_ganyu.png"><p>감우</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_xiao.png"><p>소</p></a></div>
-            <div><a href="home.html"><img class="c_icon" src="../Image/icon_hutao.png"><p>호두</p></a></div>
-
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xinyan.png"><p>신염</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_yanfei.png"><p>연비</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ningguang.png"><p>응광</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_keqing.png"><p>각청</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xiangling.png"><p>향릉</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_beidou.png"><p>북두</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xingqiu.png"><p>행추</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_qiqi.png"><p>치치</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ganyu.png"><p>감우</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xiao.png"><p>소</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_hutao.png"><p>호두</p></a></div>
+        </div>
+        <h2>이나즈마</h2>
+        <div class="character_icon">
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카에데하라<br>카즈하</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ayaka.png"><p>카미사토<br>아야카</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_thoma.png"><p>토마</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sayu.png"><p>사유</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_yoimiya.png"><p>요이미아</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sara.png"><p>쿠죠 사라</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_shogun.png"><p>라이덴 쇼군</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kokomi.png"><p>산고노미아<br>코코미</p></a></div>
         </div>
     </div>
 </body>
