--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -35,8 +35,12 @@
         </ul>
     </header>
     <div class="main">
-        <h2>주인공</h2>
+        <h2>플레이어</h2>
         <div class="character_icon">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver.png"><p>남행자</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver1.png"><p>여행자</p></a></div>
         </div>
@@ -52,6 +56,7 @@
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_albedo.png"><p>알베도</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_eula.png"><p>유라</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_babara.png"><p>바바라</p></a></div>
+            <div></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_rosaria.png"><p>로자리아</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_fischl.png"><p>피슬</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_bennett.png"><p>베넷</p></a></div>
@@ -73,20 +78,25 @@
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_beidou.png"><p>북두</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xingqiu.png"><p>행추</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_qiqi.png"><p>치치</p></a></div>
+            <div></div>
+            <div></div>
+            <div></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ganyu.png"><p>감우</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xiao.png"><p>소</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_hutao.png"><p>호두</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_tartaglia.png"><p>타르탈리아</p></a></div>
         </div>
         <h2>이나즈마</h2>
         <div class="character_icon">
-            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카에데하라<br>카즈하</p></a></div>
-            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ayaka.png"><p>카미사토<br>아야카</p></a></div>
+            <div></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카즈하</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ayaka.png"><p>아야카</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_thoma.png"><p>토마</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sayu.png"><p>사유</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_yoimiya.png"><p>요이미아</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sara.png"><p>쿠죠 사라</p></a></div>
             <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_shogun.png"><p>라이덴 쇼군</p></a></div>
-            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kokomi.png"><p>산고노미아<br>코코미</p></a></div>
+            <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kokomi.png"><p>코코미</p></a></div>
         </div>
     </div>
 </body>
