캐릭터 페이지 배경 조정

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
     </header>
-    <div class="main">
+    <div class="main home">
         <div class="main_writing">
             <h1>티바트 대륙에 오신것을 환영합니다</h1>
             <p>원신은 7가지 원소들의 상호작용을 이용한 미호요의 3D 오픈월드 액션 RPG 게임입니다</p>
