캐릭터/무기 페이지 ui 업데이트

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -15,7 +15,7 @@
             <li class="menu_b">
                 <div class="main_menu menu2"><a href="../HTML/Home.html">홈</a></li></div>
             <li class="menu_c">
-                <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
+                <div class="main_menu menu3"><a href="#">게임정보</a></div>
                 <ul class="sub_menu">
                     <li><a href="../HTML/Character.html">캐릭터</a></li>
                     <li><a href="../HTML/Weapon.html">장비</a></li>
@@ -36,7 +36,7 @@
     </header>
     <div class="main">
         <div class="bg_player">
-            <h2>플레이어</h2>
+            <h2><img src="../Image/icon_traverconstellation.png" height="40px">플레이어<img src="../Image/icon_traverconstellation.png" height="40px"></h2>
             <div class="character_icon">
                 <div></div>
                 <div></div>
@@ -46,8 +46,8 @@
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver1.png"><p>여행자</p></a></div>
             </div>
         </div>
-        <div>
-            <h2>몬드</h2>
+        <div class="bg_md">
+            <h2><img src="../Image/icon_MD.png" height="40px">몬드<img src="../Image/icon_MD.png" height="40px"></h2>
             <div class="character_icon">
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
@@ -70,8 +70,8 @@
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
             </div>
         </div>
-        <div>
-            <h2>리월</h2>
+        <div class="bg_ly">
+            <h2><img src="../Image/icon_LY.png" height="40px">리월<img src="../Image/icon_LY.png" height="40px"></h2>
             <div class="character_icon">
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
@@ -92,8 +92,8 @@
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_tartaglia.png"><p>타르탈리아</p></a></div>
             </div>
         </div>
-        <div>
-            <h2>이나즈마</h2>
+        <div class="bg_iz">
+            <h2><img src="../Image/icon_IZ.png" height="40px">이나즈마<img src="../Image/icon_IZ.png" height="40px"></h2>
             <div class="character_icon">
                 <div></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카즈하</p></a></div>
