--- a/HTML/Weapon.html
+++ b/HTML/Weapon.html
@@ -15,7 +15,7 @@
             <li class="menu_b">
                 <div class="main_menu menu2"><a href="../HTML/Home.html">홈</a></li></div>
             <li class="menu_c">
-                <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
+                <div class="main_menu menu3"><a href="#">게임정보</a></div>
                 <ul class="sub_menu">
                     <li><a href="../HTML/Character.html">캐릭터</a></li>
                     <li><a href="../HTML/Weapon.html">장비</a></li>
@@ -78,10 +78,10 @@
         <div class=" ">
             <h2>법구(★5)</h2>
             <div class="weapon_icon type4">
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Pride.png"><p>천공의 두루마리</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Wolf's Gravestone.png"><p>사풍 원서</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/The Unforged.png"><p>속세의 자물쇠</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Song of Broken Pines.png"><p>불멸의 달빛</p></a></div>
+                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Atlas.png"><p>천공의 두루마리</p></a></div>
+                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Lost Prayer to the Sacred Winds.png"><p>사풍 원서</p></a></div>
+                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Memory of Dust.png"><p>속세의 자물쇠</p></a></div>
+                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Everlasting Moonglow.png"><p>불멸의 달빛</p></a></div>
             </div>
         </div>
     </div>
