--- a/HTML/Information.html
+++ b/HTML/Information.html
@@ -15,7 +15,7 @@
             <li class="menu_b">
                 <div class="main_menu menu2"><a href="../HTML/Home.html">홈</a></li></div>
             <li class="menu_c">
-                <div class="main_menu menu3"><a href="../HTML/Character.html">게임정보</a></div>
+                <div class="main_menu menu3"><a href="#">게임정보</a></div>
                 <ul class="sub_menu">
                     <li><a href="../HTML/Character.html">캐릭터</a></li>
                     <li><a href="../HTML/Character.html">장비</a></li>
