--- a/HTML/Information.html
+++ b/HTML/Information.html
@@ -35,6 +35,52 @@
         </ul>
     </header>
     <div class="main">
+        <div class="main_writing">
+            <div class="wich">
+                <h1>티바트</h1>
+                    <p>
+                    7가지 원소가 살아 숨 쉬는 판타지 세계 티바트.
+                    <br>
+                    아주 오래전, 사람들은 신령에 대한 신앙을 통해 원소의 힘을 부여받아 황야를 개척하고 나라를 건설했다.
+                    <br>
+                    500년 전, 오래된 나라가 멸망 후 천지가 개벽하고...
+                    <br>
+                    대륙을 휩쓸던 재난이 멈췄지만, 사람들이 고대하던 평화는 오지 않았다.
+                </p>
+            </div>
+            <div class="wich">
+                <h1>몬드</h1>
+                <p>
+                    티바트 대륙 북동쪽에 위치한 자유의 도시.
+                    <br>
+                    산과 드넓은 평원 사이로 민들레 향기를 가득 머금은 자유의 바람이 시드르 호수 위로 불며
+                    <br>
+                    호수 중앙의 섬에 위치한 몬드성에 바람 신 바르바토스의 축복과 은혜를 가져다준다.
+                </p>
+            </div>
+            <div class="wich">
+                <h1>리월</h1>
+                <p>
+                    티바트 대륙 동쪽에 위치한 풍요로운 항구 도시.
+                    <br>
+                    우뚝 솟아있는 산기슭과 석림, 생기 넘치는 강가와 드넓은 평원이 만든 리월의 다양한 지형은
+                    <br>
+                    계절마다 다채로운 풍경을 보여준다.
+                    <br>
+                    산과 돌이 이뤄낸 장관 속엔 얼마나 많은 바위 신의 오랜 선물들이 사람들을 기다리고 있을까?
+                </p>
+            </div>
+            <div class="wich">
+                <h1>이나즈마</h1>
+                <p>
+                    티바트 대륙 극동에 위치한 봉쇄된 제도
+                    <br>
+                    끝없는 뇌우를 뚫고 벚꽃의 가호가 서린 열도에 들어서면 둘러싸인 사취, 우뚝 솟은 절벽
+                    <br>
+                    그리고 그윽한 산속에서 위대하신 나루카미 쇼군이 추구하는 영원을 확인할 수 있다.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
