--- a/HTML/Information.html
+++ b/HTML/Information.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/main.css">
+    <script type="text/javascript" src="../JS/index.js"></script>
     <title>원신</title>
 </head>
 <body>
@@ -34,8 +35,8 @@
             </li>
         </ul>
     </header>
-    <div class="main">
-        <div class="main_writing">
+    <section class="#">
+        <div class="#">
             <div class="wich">
                 <h1>티바트</h1>
                     <p>
@@ -81,6 +82,6 @@
                 </p>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
