--- a/HTML/Weapon.html
+++ b/HTML/Weapon.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
     </header>
-    <div class="main weapon_main">
+    <section class="main weapon_main">
         <div class=" ">
             <h2>한손검(★5)</h2>
             <div class="weapon_icon type6">
@@ -84,6 +84,6 @@
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Everlasting Moonglow.png"><p>불멸의 달빛</p></a></div>
             </div>
         </div>
-    </div>
+    </section>>
 </body>
 </html>
